--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,5 @@ runs:
       shell: bash
     - run: pip install -r requirements.txt
       shell: bash
-    - run: ls
-      shell: bash
-    - run: entrypoint.sh
+    - run: bash entrypoint.sh
       shell: bash
