Add envs to the action
Co-authored-by: wallrony <wallrony@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -19,3 +19,7 @@ runs:
       shell: bash
     - run: bash entrypoint.sh
       shell: bash
+      env:
+        RUN_ID: ${{ inputs.run-id }}
+        AG_SECRET: ${{ inputs.ag-secret }}
+        SERVER_HOST: ${{ inputs.server-host }}
