--- a/.github/workflows/grant-access.yaml
+++ b/.github/workflows/grant-access.yaml
@@ -14,7 +14,7 @@ jobs:
 
       - name: 'Generate Access Granter random access key'
         id: ag-random-access-key-generator
-        run: echo "::set-output name=ag-random-access-key::$(echo $(python -c 'import uuid ; print(f"###random_access_key={uuid.uuid4()}###")'))"
+        run: echo "::set-output name=ag-random-access-key::$(python -c 'import uuid ; print(f"###random_access_key={uuid.uuid4()}###")')"
         shell: bash
 
       - name: 'SDM Access Granter Client'
