--- a/.github/workflows/grant-access.yaml
+++ b/.github/workflows/grant-access.yaml
@@ -30,6 +30,7 @@ jobs:
         uses: ./
         with:
           run-id: ${{ github.run_id }}
+          run-attempt: ${{ github.run_attempt }}
           ag-random-access-key: ${{ needs.generate-random-access-key.outputs.ag-random-access-key }}
           ag-secret: ${{ secrets.AG_SECRET }}
           server-host: ${{ secrets.SERVER_HOST }}
