--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   env:
-    RUN_ID: ${{ github.run_id }}
+    RUN_ID: ${{ GITHUB_RUN_ID }}
     RANDOM_KEY_JOB_NAME: ${{ inputs.ag-random-key-job-name }}
     AG_RANDOM_KEY: ${{ inputs.ag-random-key }}
     AG_SECRET: ${{ inputs.ag-secret }}
